# apexml-lite

./: .gitignore  README.md  claude.md  pyproject.toml
.github/workflows/: ingest.yml  readme.yml
dbt/: dbt_project.yml  profiles.yml.example  pyproject.toml
dbt/models/marts/: dim_championship_drivers.sql  dim_championship_teams.sql  dim_drivers.sql  dim_meetings.sql  dim_sessions.sql  fct_car_data.sql  fct_intervals.sql  fct_laps.sql  fct_location.sql  fct_overtakes.sql  fct_pit_stops.sql  fct_race_control.sql  fct_race_positions.sql  (+6 more)
ingestion/: .env.example  pyproject.toml
ingestion/src/: auth.py  check_new_sessions.py  client.py  config.py  load_car_data.py  load_championship_drivers.py  load_championship_teams.py  load_drivers.py  load_intervals.py  load_laps.py  load_location.py  load_meetings.py  load_overtakes.py  load_pit.py  load_position.py  load_race_control.py  load_session_result.py  load_sessions.py  load_starting_grid.py  load_stints.py  load_team_radio.py  load_weather.py  loader.py  main.py
scripts/: generate_readme.py
streamlit/: app.py  cortex_model.yaml  environment.yml  pyproject.toml
streamlit/YP8ZD_FXRF58X6MU/: streamlit_app.py
streamlit/pages/: chatbot.py  dashboard.py  forecast.py
streamlit/tabs/: apexai.py  calendar.py  chatbot.py  comparison.py  dashboard.py  forecast.py  lap_times.py  positions.py  race.py  results.py  strategy.py  telemetry.py  track_dominance.py
streamlit/utils/: colors.py  connection.py  jwt_generator.py
terraform/: main.tf  outputs.tf  provider.tf  roles.tf  terraform.tfvars.example  variables.tf
(+20 files in other folders)
